--- a/css/style.css
+++ b/css/style.css
@@ -856,19 +856,7 @@ h2.page-title{
 
 
 /* Front page features */
-.feature-container {
-    display: flex; 
-    flex-wrap: wrap;
-    text-align: center; 
-    justify-content: center;
-    
-    margin: auto; 
-    padding: auto;
-}
 
-.feature {
-    margin: 1em;
-}
 #overlay {
   position: fixed; /* Sit on top of the page content */
   display: none; /* Hidden by default */
@@ -891,10 +879,29 @@ h2.page-title{
     height: 80%;
     width: auto;
 }
-.feature.image {
-    width: 30%;
+.feature-container {
+    display: flex; 
+    flex-wrap: wrap;
+    text-align: center; 
+    justify-content: center;
+    align-items:center;
+    width: 80%;
+    margin: auto; 
+    padding: auto;
+}
+
+.feature {
+    margin: 1em;
+}
+.feature.image-container {
+    width: 35%;
+}
+.feature.image-container > img {
+    width:100%;
+	height:auto;
     cursor: pointer;
 }
+
 .feature.logo-grid {
     width: 30%;
     padding: 0.1em;
@@ -902,14 +909,22 @@ h2.page-title{
 
 .feature.text {
     padding: 1em;
+    text-align: left;
+    margin: 0;
+/*     margin-left: 5em; */
 }
 .feature.text > h2 {
     margin: 0;
+    text-align: center;
 } 
-.feature.text > p, ul {
+.feature.text > p, .feature.text > ul {
     font-weight: 300 !important;
     font-family: 'Lato', sans-serif;
     font-size: 15pt;
+    width: 700px;
+/*     display:block; */
+/*     width:80%; */
+    word-wrap:break-word;
 }
 
 .title-section {
